@@ -213,9 +213,9 @@ DBUser=root
 #	Shared memory size for storing hosts and items data.
 #
 # Mandatory: no
-# Range: 131072-1073741824 (128KB-1GB)
+# Range: 128K-1G
 # Default:
-# CacheSize=8388608
+# CacheSize=8M
 
 ### Option: CacheUpdateFrequency
 #	How often Zabbix will perform update of configuration cache, in seconds.
@@ -230,27 +230,27 @@ DBUser=root
 #	Shared memory size for storing history data.
 #
 # Mandatory: no
-# Range: 131072-1073741824 (128KB-1GB)
+# Range: 128K-1G
 # Default:
-# HistoryCacheSize=8388608
+# HistoryCacheSize=8M
 
 ### Option: TrendCacheSize
 #	Size of trend cache, in bytes.
 #	Shared memory size for storing trends data.
 #
 # Mandatory: no
-# Range: 131072-1073741824 (128KB-1GB)
+# Range: 128K-1G
 # Default:
-# TrendCacheSize=4194304
+# TrendCacheSize=4M
 
 ### Option: HistoryTextCacheSize
 #	Size of text history cache, in bytes.
 #	Shared memory size for storing character, text or log history data.
 #
 # Mandatory: no
-# Range: 131072-1073741824 (128KB-1GB)
+# Range: 128K-1G
 # Default:
-# HistoryTextCacheSize=16777216
+# HistoryTextCacheSize=16M
 
 ### Option: NodeNoEvents
 #	If set to '1' local events won't be sent to master node.
